Startup page done :sparkles:

--- a/views/startup.html
+++ b/views/startup.html
@@ -16,7 +16,7 @@
         <div class="choice">
             <form>
                 <label for="date">Pick a date to start from:</label>
-                <input type="date" name="date" id="date">
+                <input type="date" name="date" id="date" required>
                 <button id="continue-btn">Continue</button>
             </form>
         </div>
