Main page design done :lipstick:

--- a/views/popup.html
+++ b/views/popup.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" type="text/css">
+    <link rel="stylesheet" href="../style/style.css" type="text/css">
 </head>
+
 <body>
-    <h1>Your history</h1>
+    <h1>Your navigation time</h1>
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">Date</th>
+                <th scope="col">From</th>
+                <th scope="col">To</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>
+
+    <button>Clear</button>
 </body>
+
 </html>
