--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,9 @@
 body {
-    min-width: 300px;
-    min-height: 360px;
-
+    width: 300px;
+    height: 360px;
     padding: 20px;
-
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -38,18 +35,71 @@ h2 {
     padding: 5px;
 }
 
-.choice button {
+button {
     padding: 10px;
-
     color: white;
     background: #14ABBD;
-
     border-radius: 10px;
     border: none;
-
+    outline: none;
     transition: .3s;
 }
 
-.choice button:hover {
+button:hover {
     background: #318BA3;
+}
+
+table{
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .2);
+    border-radius: 5px;
+}
+
+table tbody{
+  display:block;
+  width: 100%;
+  overflow: auto;
+  height: 200px;
+  padding: 5px 0;
+}
+
+table thead tr {
+   display: block;
+   background: #14ABBD;
+   color: white;
+   border-radius: 5px 5px 0 0;
+   padding: 5px;
+}
+
+table thead {
+  color:#fff;
+  border-radius: 5px 0;
+}
+
+table th, table td {
+  padding: 5px;
+  width: 100px;
+}
+
+table td:nth-child(2) {
+    border-left: 1px solid #14ABBD;
+    border-right: 1px solid #14ABBD;
+}
+
+table tbody tr {
+    margin: 5px 0;
+}
+
+table tbody::-webkit-scrollbar {
+    width: 10px;
+}
+
+table tbody::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+table tbody::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
