Dates display done :sparkles:

--- a/views/popup.html
+++ b/views/popup.html
@@ -17,12 +17,14 @@
                 <th scope="col">To</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="table-body">
             
         </tbody>
     </table>
 
     <button>Clear</button>
+    
+    <script src="../scripts/popup.js"></script>
 </body>
 
 </html>
