Added clearing feature :sparkles:

--- a/views/popup.html
+++ b/views/popup.html
@@ -22,7 +22,7 @@
         </tbody>
     </table>
 
-    <button>Clear</button>
+    <button id="clear-btn">Clear</button>
     
     <script src="../scripts/popup.js"></script>
 </body>
