Initialization logic changed :recycle:

--- a/views/startup.html
+++ b/views/startup.html
@@ -22,10 +22,9 @@
         </div>
         <span>OR</span>
         <div class="choice">
-            <button id="start-btn">Start analyzing from now!</button>
+            <button id="start-btn">Start analyzing from now</button>
         </div>
     </section>
-
     <script src="../scripts/startup.js"></script>
 </body>
 
